src/objects/taxTable__c.object
<CustomObject>
    <fields>
        <fullName>base__c</fullName>
        <label>Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>incomeFrom__c</fullName>
        <label>Income From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>incomeTo__c</fullName>
        <label>Income To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>taxRate__c</fullName>
        <label>Tax Rate Per Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Tax Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>